# typer

./: Cargo.toml  LICENSE  NOTES.md  README.md  wordlist.txt
src/: frase.rs  main.rs  text.rs  types.rs
src/text/: mod.rs  wordlist.rs  wordlist_types.rs
