[package]
name = "typer"
version = "0.0.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
crossterm = "0.27.0"
clap = { version = "3.1.6", features = ["derive"] }
rand = "0.8.5"
log = "0.4.20"

[dependencies.simple_logger]
simple_logger = "4.3.3"
features = ["colors", "timestamps", "stderr"]
